Versão: 1.0.3
Data: ?
    Adições:
        - Mods atualizados:
            - Adicionada traduções para a Fazenda lunar, do mod Lunar panel, em cooperação com o mod Bio Industries.
    Ajustes:
        - Corrigido um erro de typo na tradução do mod Logistics Insights onde a qualidade do item era ignorada, e o nome do item era mostrado novamente na guia de estatísticas da rede logística.

---------------------------------------------------------------------------------------------------
Versão: 1.0.2
Data: 15/11/2025
    Depencencies:
        - In this upload, we are removing the optional dependent mods from de site list. Since all supported mods are listed on the mod page, if your mod is on this list, please consider adding our mod as an optional one to your list to inform players that they can download Portuguese (Brazil) translations for your mod. This change aims to reduce repetitive work and the huge list of dependent mods as the package expands.
        - Another detail concerns the changelog; with this update, we are also listing all the changes in Brazilian Portuguese so that native speakers know what is being changed, since this is a package for Brazilian Portuguese speakers. This will not imply the exclusion of the english returns here or in the mod page, so that all English-speaking readers know what's going on (without needing to translate :P)
    Adições:
        - Mods traduzidos ( +10 / Total: 26 )
            Cannon Turret - por Vortik,
            Carriage Transport - por SoulCRYSIS,
            Early Elevated Rails - por Marcel171297,
            Heat Inserter - por Kryzeth,
            Logistics Insights - por farzag,
            Mini Trains - por Klonan & Sacredanarchy,
            Mini Trains Lead the Way - por Indzasa,
            Planet Belt Portal - por agaede22,
            Sushi Splitters - por TeXiCiTy,
            Tungsten - por cackling.fiend & Brevven
    Correções: