@@ -32,6 +32,11 @@ ter justificativa para ser publicado no mod oficialmente.
 Com o lançamento oficial do mod em `11/11/2025`, o planejado é estar enviando uma atualização ao portal mod até o `10° dia` de cada mês, ou quando juntar bastante conteúdo.
 
 # 🔣 Mods traduzidos ( Atualmente: 26 )
+> V1.0.3 - `em breve` ( `+2 mods traduzidos` )
+
+- [Actual Underground Pipes](https://mods.factorio.com/mod/the-one-mod-with-underground-bits) - por protocol_1903
+- [Scrappy Industry](https://mods.factorio.com/mod/scrap-industry) - por SafTheLamb
+
 > V1.0.2 - `15/11/2025` ( `+10 mods traduzidos` )
 
 - [Cannon Turret](https://mods.factorio.com/mod/vtk-cannon-turret) - por Vortik
