@@ -6,6 +6,34 @@
   "description": "Pacote com traduções para vários mods, esse pacote será atualizado a medida que muitos mods forem traduzidos. Sugestões de mods a serem traduzidos podem ser feitas a qualquer momento!\n\n-> If you are a mod creator and your mod is listed here, feel free to get a copy of the translations that have been made, or add our mod as a optional dependency on your mod!\n\n-> If your mod is not listed here and you would like to locate your mod to Brazilian Portuguese with as much accurate detail as possible, or your mod changed/add phrases..., contact me!",
   "factorio_version": "2.0",
   "dependencies": [
-    "base"
+    "base",
+    "? AspctTrainPatch",
+    "? BatteryElectricTrain",
+    "? Better_Starmap_Background",
+    "? Bio_Industries_2",
+    "? bztungsten2",
+    "? carriage",
+    "? early-elevated-rails",
+    "? elevated-pipes",
+    "? FluidMustFlow",
+    "? FusionPoweredRobots",
+    "? heat-inserter",
+    "? kc-lunarpanel",
+    "? logistics-insights",
+    "? Mini_Trains",
+    "? Mini-Trains-Lead-the-Way",
+    "? minimalist-rails",
+    "? ore-ganizer",
+    "? pk-fracking-tower",
+    "? planet-belt-portal",
+    "? reach-equipment",
+    "? reactor-m",
+    "? scrap-industry",
+    "? skewer_planet_vesta",
+    "? sushi-splitters",
+    "? textplates",
+    "? the-one-mod-with-underground-bits",
+    "? visible-planets",
+    "? vtk-cannon-turret"
   ]
 }
