@@ -1,0 +1,64 @@
+[mod-name]
+scrap-industry=Industria da sucata
+
+[mod-description]
+scrap-industry=Reaproveite os resíduos da montagem imprecisa das máquinas para produzir novos materiais. Nenhum processo é verdadeiramente perfeito.
+
+[item-name]
+iron-scrap=Sucata de ferro
+copper-scrap=Sucata de cobre
+steel-scrap=Sucata de aço
+circuit-scrap=Sucata de circuito
+plastic-bits=Peças de plástico
+mech-scrap=Sucata mecânica
+tungsten-scrap=Sucata de tungstênio
+holmium-scrap=Sucata de hólmio
+lithium-dust=Pó de lítio
+lead-scrap=Sucata de chumbo
+titanium-scrap=Sucata de titânio
+scrap=Sucata Fulgoriana
+
+[entity-name]
+lithium-flame=Chama de lítio
+
+[recipe-name]
+item-from-scrap=__1__ de sucata
+plastic-bar-from-bits=Barra de plástico a partir de peças
+bioplastic-from-bits=Bioplástico a partir de peças
+lithium-plate-from-powder=Chapa de lítio a partir de pó
+sort-mech-scrap=Separar sucata mecânica
+scrap-recycling=Recligagem de sucata Fulgoriana
+hand-crafted=__1__ feito a mão
+molten-iron-from-steel-scrap=Ferro fundido de sucata de aço
+
+[mod-setting-name]
+scrap-industry-no-mercy=Sem piedade
+scrap-industry-plastic=Peças de plástico
+scrap-industry-mech=Sucata mecânica
+scrap-industry-mech-cost=Sucata mecânica por motor
+scrap-industry-metallurgy=Metalurgia da sucata
+scrap-industry-lithium=Pó de lítio
+scrap-industry-volatile-lithium=Lítio volátil
+scrap-industry-handcraft=Favorável ao manual
+scrap-industry-byproduct-scale=Escala de subprodutos
+scrap-industry-failrate-scale=Escala da taxa de falhas
+scrap-industry-failrate-min=Taxa mínima de falhas
+scrap-industry-rust=Sucata de ferro enferrujada
+scrap-industry-no-scrap-scrap=Sem desperdício de sucata.
+scrap-industry-red-circuit-plastic=Circuitos avançados feitos com sucata requerem plástico
+scrap-industry-unhide-recipe-signals=Exibir sinais de receita
+
+[mod-setting-description]
+scrap-industry-no-mercy=Viabilizar o reaproveitamento de materiais até mesmo para os componentes intermediários básicos, como engrenagens, cabos e bastões.
+scrap-industry-plastic=Sucata ao fabricar barras de plástico e estruturas de baixa densidade
+scrap-industry-mech=Sucata ao fabricar engrenagens e motores
+scrap-industry-mech-cost=Qual será quantidade de sucata mecânica necessária para fabricar uma unidade de motor?
+scrap-industry-metallurgy=Derreta a sucata até obter seus equivalentes fundidos
+scrap-industry-lithium=Pó obtido ao fabricar itens com lítio em Aquilo
+scrap-industry-volatile-lithium=Caso você goste de sucata de lítio, mas não queira que sua base exploda.
+scrap-industry-handcraft=Cria duplicatas ocultas das receitas para permitir a fabricação manual das receitas sem interrupções
+scrap-industry-byproduct-scale=Modificador global que define a quantidade de sucata a ser adicionada às receitas. Valores maiores que 1 podem resultar em desequilíbrio
+scrap-industry-failrate-min=Um valor de 0,01 significa que qualquer receita com subprodutos terá, no máximo, 99% de chance de sucesso. Um valor de 0 significa que receitas mais caras podem atingir 100% de chance de sucesso
+scrap-industry-rust=Faz com que a sucata de ferro enferruje, em combinação com o mod Roc's Rusting Iron
+scrap-industry-no-scrap-scrap=Receitas que utilizam sucata não irão gerar mais sucatas
+scrap-industry-unhide-recipe-signals=Torna visíveis os sinais ocultos das receitas, o que pode resolver problemas ao tentar definir receitas através da rede de circuitos 
