@@ -2,4 +2,4 @@
 slondo-ptbr=Traduções pt-BR
 
 [mod-description]
-slondo-ptbr=Pacote com traduções para vários mods, esse pacote será atualizado a medida que muitos mods forem traduzidos. Sugestões de mods a serem traduzidos podem ser feitas a qualquer momento!\n\n👨‍💻 If you are a mod creator and your mod is listed here, feel free to get a copy of the translations that have been made!\n📣 If your mod is not listed here and you would like to locate your mod to Brazilian Portuguese with as much accurate detail as possible, or your mod changed/add phrases..., contact me!
+slondo-ptbr=Pacote com traduções para vários mods, esse pacote será atualizado a medida que muitos mods forem traduzidos. Sugestões de mods a serem traduzidos podem ser feitas a qualquer momento!\n\n-> If you are a mod creator and your mod is listed here, feel free to get a copy of the translations that have been made (please give proper credits!), or add our mod as a optional dependency on your mod, making your mod more accessible for brazilian portuguese speakers!\n\n-> If your mod is not listed here and you would like to locate your mod to Brazilian Portuguese with as much accurate detail as possible, or your mod changed/add phrases..., contact me!
