@@ -1,0 +1,16 @@
+[mod-name]
+the-one-mod-with-underground-bits=Canos subterrâneos reais
+
+[mod-description]
+the-one-mod-with-underground-bits=O quê? Canos que realmente são... subterrâneos!?
+
+[entity-name]
+tomwub-underground=__1__ subterrâneo
+
+[controls]
+tomwub-swap-layer=Alterar camada do cano
+tomwub-alt-mode=Alternar visualização do cano subterrâneo
+
+[mod-setting-name]
+pipe-opacity=Opacidade do cano subterrâneo
+fmf-pipe-opacity=Opacidade do Duto do mod Fluidos Devem Fluir
